:recycle: Refactor Zaak ordering filter to use django_filters
because django_filters.OrderingFilter does properly display the enum in the OAS
