# src/openzaak/components/zaken/openapi.yaml
@@ -1915,15 +1915,19 @@ paths:
           type: string
       - name: ordering
         in: query
-        description: '***AFWIJKING:** Which field to use when ordering the results.'
+        description: '***AFWIJKING:** Het veld waarop de resultaten geordend worden.'
         required: false
         schema:
           type: string
           enum:
           - startdatum
+          - -startdatum
           - einddatum
+          - -einddatum
           - publicatiedatum
+          - -publicatiedatum
           - archiefactiedatum
+          - -archiefactiedatum
       - name: page
         in: query
         description: Een pagina binnen de gepagineerde set resultaten.
@@ -5835,9 +5839,37 @@ components:
           minLength: 1
         ordering:
           title: Ordering
-          description: '***AFWIJKING:** Which field to use when ordering the results.'
+          description: '***AFWIJKING:** Het veld waarop de resultaten geordend worden.
+
+
+            Uitleg bij mogelijke waarden:
+
+
+            * `startdatum` - Startdatum
+
+            * `-startdatum` - Startdatum (descending)
+
+            * `einddatum` - Einddatum
+
+            * `-einddatum` - Einddatum (descending)
+
+            * `publicatiedatum` - Publicatiedatum
+
+            * `-publicatiedatum` - Publicatiedatum (descending)
+
+            * `archiefactiedatum` - Archiefactiedatum
+
+            * `-archiefactiedatum` - Archiefactiedatum (descending)'
           type: string
-          minLength: 1
+          enum:
+          - startdatum
+          - -startdatum
+          - einddatum
+          - -einddatum
+          - publicatiedatum
+          - -publicatiedatum
+          - archiefactiedatum
+          - -archiefactiedatum
     Wijzigingen:
       type: object
       properties:
